# keystone

./: README.md
app/: Package.swift
core/: Cargo.toml  build.rs
core/crates/ks-daemon/: Cargo.toml
core/crates/ks-daemon/src/: main.rs
core/crates/ks-ipc/: Cargo.toml
core/crates/ks-ipc/src/: lib.rs
core/crates/ks-llm/: Cargo.toml
core/crates/ks-llm/src/: lib.rs
core/crates/ks-quiz/: Cargo.toml
core/crates/ks-quiz/src/: lib.rs
core/crates/ks-scheduler/: Cargo.toml
core/crates/ks-scheduler/src/: lib.rs
core/crates/ks-store/: Cargo.toml
core/crates/ks-store/src/: lib.rs
data/: XPC_PROTOCOL.md
llm/engine/: evaluator.py  generator.py  server.py
