[workspace]
resolver = "2"
members = [
    "crates/ks-daemon/",
    "crates/ks-ipc/",
    "crates/ks-llm/",
    "crates/ks-quiz/",
    "crates/ks-scheduler/",
    "crates/ks-store/",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hoshiimo0"]
license = "MIT"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# error handling
anyhow = "1"
thiserror = "2"
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]  }
